cleaning up more text

--- a/exopapers.bib
+++ b/exopapers.bib
@@ -2622,6 +2622,19 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Henden14,
+   author = {{Henden}, A. and {Munari}, U.},
+    title = "{The APASS all-sky, multi-epoch BVgri photometric survey}",
+  journal = {Contributions of the Astronomical Observatory Skalnate Pleso},
+ keywords = {Surveys, Catalogs, Techniques: photometric},
+     year = 2014,
+    month = mar,
+   volume = 43,
+    pages = {518-522},
+   adsurl = {http://adsabs.harvard.edu/abs/2014CoSka..43..518H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Henry96,
    author = {{Henry}, T.~J. and {Soderblom}, D.~R. and {Donahue}, R.~A. and
