more changes, more to do

--- a/ms.tex
+++ b/ms.tex
@@ -501,6 +501,10 @@ follow-up observing efforts.
 
 This is Brendan.
 
+\anytodo{201828749 has an AO companion, flux ratio 6:1 or so. We call it a planet.
+It's a very flat bottom thing, with fairly short ingress and egress: the transit shape
+is way more planet than EB so I'm comfortable with this designation. We need
+to talk about this though.}
 
 
 
@@ -777,6 +781,7 @@ EPIC 201257461 is identified in the RAdial Velocity Experiment (RAVE) Fourth Dat
 as a target with $\logg = 3.18$, consistent with that of a giant star.
 It is therefore perhaps not surprising that this system is flagged as a false positive based on 
 the transit shape.
+EPIC 201929294 has a reduced proper motion consistent with that of a giant star
 
 
 \anytodo{We should have a figure of many subplots, of phase-folded
