--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -34,9 +34,9 @@ $201445392$ & $2$ & $0.18$ &  - & $< 10^{-4}$ & $0.034$ & $0.055$ & $0.18$ & $0.
 $201465501$ & $1$ & $0.68$ &  - & $< 10^{-4}$ & $0.021$ & $3.0\times10^{-3}$ & $0.14$ & $0.025$ & Candidate \\
  \color{red} $201505350$  & \color{red}  $1$  & \color{red}  $2.69$  & \color{red}   -  & \color{red}  $< 10^{-4}$  & \color{red}  $0.020$  & \color{red}  $0.966$  & \color{red}  $0.18$  & \color{red}  $0.986$  & \color{red}  FP\\
 $201505350$ & $2$ & $0.70$ &  - & $< 10^{-4}$ & $3.0\times10^{-4}$ & $1.2\times10^{-4}$ & $0.07$ & $4.2\times10^{-4}$ & Planet \\
-$201546283$ & $1$ & $0.15$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $< 10^{-4}$ & Planet \\
+$201546283$ & $1$ & $0.15$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $< 10^{-4}$ & Planet \\
 $201549860$ & $1$ & $0.18$ &  - & $< 10^{-4}$ & $1.7\times10^{-3}$ & $6.5\times10^{-4}$ & $0.20$ & $2.4\times10^{-3}$ & Planet \\
-$201555883$ & $1$ & $0.94$ &  - & $< 10^{-4}$ & $5.8\times10^{-4}$ & $3.7\times10^{-4}$ & $0.20$ & $9.5\times10^{-4}$ & Planet \\
+$201555883$\tablenotemark{1} & $1$ & $0.94$ &  - & $< 10^{-4}$ & $5.8\times10^{-4}$ & $3.7\times10^{-4}$ & $0.20$ & $9.5\times10^{-4}$ & Candidate \\
  \color{red} $201565013$  & \color{red}  $1$  & \color{red}  $1.69$  & \color{red}   -  & \color{red}  $2.7\times10^{-3}$  & \color{red}  $0.027$  & \color{red}  $0.926$  & \color{red}  $0.07$  & \color{red}  $0.956$  & \color{red}  FP\\
 $201569483$ & $1$ & $2.06$ &  - & $0.468$ & $< 10^{-4}$ & $0.092$ & $0.01$ & $0.560$ & Candidate \\
 $201577035$ & $1$ & $0.14$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $1.0\times10^{-4}$ & $0.20$ & $1.1\times10^{-4}$ & Planet \\
@@ -51,11 +51,11 @@ $201736247$ & $1$ & $0.42$ &  - & $< 10^{-4}$ & $1.9\times10^{-4}$ & $8.5\times1
 $201754305$ & $1$ & $0.65$ &  - & $< 10^{-4}$ & $1.9\times10^{-3}$ & $1.5\times10^{-3}$ & $0.18$ & $3.4\times10^{-3}$ & Planet \\
 $201754305$ & $2$ & $0.38$ &  - & $< 10^{-4}$ & $1.2\times10^{-3}$ & $6.4\times10^{-4}$ & $0.17$ & $1.9\times10^{-3}$ & Planet \\
 $201779067$ & $1$ & $1.97$ &  - & $0.036$ & $5.0\times10^{-3}$ & $0.286$ & $0.03$ & $0.327$ & Candidate \\
-$201828749$ & $1$ & $0.39$ &  - & $< 10^{-4}$ & $1.7\times10^{-3}$ & $2.2\times10^{-3}$ & $0.17$ & $3.9\times10^{-3}$ & Planet \\
+$201828749$ & $1$ & $0.39$ &  Y & $< 10^{-4}$ & $1.7\times10^{-3}$ & $2.2\times10^{-3}$ & $0.17$ & $3.9\times10^{-3}$ & Planet \\
 $201855371$ & $1$ & $0.62$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.20$ & $1.7\times10^{-4}$ & Planet \\
 $201912552$ & $1$ & $0.47$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Planet \\
 $201929294$ & $1$ & $3.12$ &  - & $< 10^{-4}$ & $6.8\times10^{-3}$ & $0.052$ & $0.05$ & $0.059$ & Candidate 
 
 \enddata
-\tablecomments{blurgh.}
+\tablenotetext{1}{Passes FPP criterion for planet, but kept as candidate due to the ephemeris match with EPIC 201569483}
 \end{deluxetable*}
