new stellar table

--- a/ms.tex
+++ b/ms.tex
@@ -341,6 +341,7 @@ the results obtained using the inflated values.
 
 
 
+
 \subsection{SpeX Spectroscopy}
 \label{Spexobs}
 
@@ -394,7 +395,9 @@ a radius 0.394$\pm0.038R_\odot$.
 We use these parameters instead of the derived photometric properties for this target.
 
 The full list of stellar parameters adopted in this paper is included in
-Table 2.
+Tables 2 and 3. The former lists parameters derived from photometry with
+un-inflated uncertainties, while the latter includes this inflating intended to
+encapsulate the effect of model uncertainties.
 % For some reason I can't get it to identify the table \ref here.
 % If anyone can figure it out, be my guest!
 
@@ -596,7 +599,8 @@ present-day location of EPIC 201912552 in either of the POSS surveys.
 \caption{Imaging for EPIC 201912552 from 1955 to 2002. There is no background
 object directly behind the present day location of the target (red circle) that could be missed 
 by the AO observations, while modern SDSS imaging can rule out wide companions
-that may have been missed at wide separations, beyond the AO field of view.}
+that may have been missed at wide separations, beyond the AO field of view. 
+All subplots are on the same scale.}
 \label{fig:archival}
 \end{figure*}
 
@@ -879,6 +883,8 @@ Now, if we want to update this with a new measurement $p^\prime(w)$,
 %\turnpage
 
 \include{table_stellarprops}
+
+\include{table_stellarprops_inflated}
 
 \include{table_planets}
 \turnpage
