--- a/exopapers.bib
+++ b/exopapers.bib
@@ -842,6 +842,27 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Brown11,
+   author = {{Brown}, T.~M. and {Latham}, D.~W. and {Everett}, M.~E. and 
+	{Esquerdo}, G.~A.},
+    title = "{Kepler Input Catalog: Photometric Calibration and Stellar Classification}",
+  journal = {\aj},
+archivePrefix = "arXiv",
+   eprint = {1102.0342},
+ primaryClass = "astro-ph.SR",
+ keywords = {catalogs, methods: data analysis, surveys, techniques: photometric},
+     year = 2011,
+    month = oct,
+   volume = 142,
+      eid = {112},
+    pages = {112},
+      doi = {10.1088/0004-6256/142/4/112},
+   adsurl = {http://adsabs.harvard.edu/abs/2011AJ....142..112B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Browning10,
    author = {{Browning}, M.~K. and {Basri}, G. and {Marcy}, G.~W. and {West}, A.~A. and
 	{Zhang}, J.},
