--- a/ms.tex
+++ b/ms.tex
@@ -799,8 +799,39 @@ nature of this target.
 Likewise, our false positive analysis is neither able to confirm nor exclude the planetary
 nature of the observed transit signal around this target. 
 
+The planets we confirm in this paper, like the planets found in the original \kep\ mission,
+span a wide range of parameter space. 
+They are at distances ranging from $34$ to $500$ pc, have radii ranging from $1.3$ to 
+$5.3 R_\odot$, and orbital periods ranging from 5.0 to 50.3 days.
+Like the original mission, we find significantly more small planets than large planets.
 
+Unlike the original mission, however, we find that nearly all of our confirmed planets
+are around stars less massive than the Sun. 
+This difference is a result of both the \Ci\ field and the target selection process.
+\Ci\ is at a significantly higher galactic latitude than the original \kep\ mission, 
+meaning there is a much lower number density of targets at large distances.
+A magnitude limited survey pointed in this direction would then have much in
+common with a volume limited survey near the galactic plane, as massive stars
+at kiloparsec distances are relatively unlikely likely to exist.
+Therefore, the pool of targets that could be selected for \Ci\ contains a larger
+fraction of subsolar stars. 
 
+Low-mass stars, particularly M dwarfs, are also a specific focus of the \KT\ mission.
+One of the primary goals of the Kepler mission was to ``Determine the abundance of 
+terrestrial and larger planets in or near the habitable zone of a wide variety of spectral 
+types of stars'' \citep{Batalha13} However, $\sim70\%$ of Kepler's target stars had 
+masses within 20\% 
+of the Sun's, while 70\% of the stars in the Galaxy have less than 50\% the mass of the 
+Sun \citep{Brown11}.
+\KT\ will fulfill the promise of \kep, with the goal of providing a yield of small planets
+around bright, small stars to facilitate follow-up measurements \citep{Howell14}.
+This is clear from the \KT\ target selection process, with thousands of K and M dwarfs
+being selected in each campaign.
+Based on these plans, we expect that \KT\ will detect hundreds of planets during its 
+lifetime, with the majority being mini-Neptunes and super-Earths around stars
+less massive than the Sun.
+
+\anytodo{Does anyone feel we should include anything else in the discussion?}
 
 
 \anytodo{We should have a figure of many subplots, of phase-folded
