--- a/ms.tex
+++ b/ms.tex
@@ -516,6 +516,20 @@ follow-up observing efforts.
 
 This is Brendan.
 
+Images for all systems AO data was obtained for is shown in Fig. \ref{Fig:AO}.
+
+\begin{figure*}[htbp]
+\centerline{\includegraphics[width=1.0\textwidth]{f2}}
+\caption{AO data for all systems imaged. 
+The main frame for each single system shows the deep, saturated image.
+The inset for each single system shows a shallower, unsaturated image to better
+identify companions at close projected orbital separations.
+For the two systems with imaged companions, EPIC 201546283 and 201828749,
+only unsaturated frames are collected.
+All subplots, including insets, are plotted on the same scale.}
+\label{fig:AO}
+\end{figure*}
+
 \anytodo{201828749 has an AO companion, flux ratio 6:1 or so. We call it a planet.
 It's a very flat bottom thing, with fairly short ingress and egress: the transit shape
 is way more planet than EB so I'm comfortable with this designation. We need
@@ -602,7 +616,7 @@ As shown in Figure \ref{fig:archival}, we do not detect any targets at the
 present-day location of EPIC 201912552 in either of the POSS surveys. 
 
 \begin{figure*}[htbp]
-\centerline{\includegraphics[width=1.0\textwidth, trim=0 1.5cm 0 1.5cm, clip=true]{f3}}
+\centerline{\includegraphics[width=1.0\textwidth, trim=0 6.30cm 0 6.30cm, clip=true]{f3}}
 \caption{Imaging for EPIC 201912552 from 1955 to 2002. There is no background
 object directly behind the present day location of the target (red circle) that could be missed 
 by the AO observations, while modern SDSS imaging can rule out wide companions
