ready to send to coauthors

--- a/exopapers.bib
+++ b/exopapers.bib
@@ -2622,6 +2622,30 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Hayden15,
+   author = {{Hayden}, M.~R. and {Bovy}, J. and {Holtzman}, J.~A. and {Nidever}, D.~L. and 
+	{Bird}, J.~C. and {Weinberg}, D.~H. and {Andrews}, B.~H. and 
+	{Allende Prieto}, C. and {Anders}, F. and {Beers}, T.~C. and 
+	{Bizyaev}, D. and {Chiappini}, C. and {Cunha}, K. and {Frinchaboy}, P. and 
+	{Garc{\'{\i}}a-Her{\'n}andez}, D.~A. and {Garc{\'{\i}}a P{\'e}rez}, A.~E. and 
+	{Girardi}, L. and {Harding}, P. and {Hearty}, F.~R. and {Johnson}, J.~A. and 
+	{Majewski}, S.~R. and {M{\'e}sz{\'a}ros}, S. and {Minchev}, I. and 
+	{O'Connell}, R. and {Pan}, K. and {Robin}, A.~C. and {Schiavon}, R.~P. and 
+	{Schneider}, D.~P. and {Schultheis}, M. and {Shetrone}, M. and 
+	{Skrutskie}, M. and {Steinmetz}, M. and {Smith}, V. and {Zamora}, O. and 
+	{Zasowski}, G.},
+    title = "{Chemical Cartography with APOGEE: Metallicity Distribution Functions and the Chemical Structure of the Milky Way Disk}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1503.02110},
+ keywords = {Astrophysics - Astrophysics of Galaxies},
+     year = 2015,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150302110H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Haywood14,
    author = {{Haywood}, R.~D. and {Collier Cameron}, A. and {Queloz}, D. and
 	{Barros}, S.~C.~C. and {Deleuil}, M. and {Fares}, R. and {Gillon}, M. and
